--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "sonner": "^1.5.0",
     "tailwind": "^4.0.0",
     "typescript": "^4.4.2",
     "use-debounce": "^10.0.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zustand": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
