fix declaration of "@typescript-eslint"

--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "extends": [
       "react-app",
       "react-app/jest",
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended"
+      "eslint:recommended"
     ],
     "rules": {
       "@typescript-eslint/no-unused-vars": [
