--- a/package.json
+++ b/package.json
@@ -36,7 +36,15 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "@typescript-eslint/no-unused-vars": [
+        "error",
+        {
+          "argsIgnorePattern": "^_"
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
@@ -52,7 +60,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "daisyui": "^4.12.10",
-    "eslint-config-react-app": "^7.0.1"
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "daisyui": "^4.12.10"
   }
 }
