--- a/package.json
+++ b/package.json
@@ -38,12 +38,7 @@
       "react-app/jest"
     ],
     "rules": {
-      "@typescript-eslint/no-unused-vars": [
-        "error",
-        {
-          "argsIgnorePattern": "^_"
-        }
-      ]
+      "@typescript-eslint/no-unused-vars": "off"
     }
   },
   "browserslist": {
