--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uid2": "^0.0.2",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
