--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/uid2": "^0.0.2",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
